--- a/src/html/partials/animation.njk
+++ b/src/html/partials/animation.njk
@@ -1,54 +1,48 @@
-<!-- Animation Begin -->
-<div class="c-animation js-animation">
+<div class="c-animation  js-animation">
     <div class="c-animation__frame" id="frame-1">
-        <img class="c-animation__bg js-img" src="assets/img/animation/frame-1.jpg">
-        <svg class="c-animation__content js-content" style="opacity: 1" width="600" height="400" viewBox="0 0 600 400">
-            <text transform="matrix(0.9848 -0.1736 0.1736 0.9848 46.3701 180.3584)" style="fill:#D4A169; font-family:'Playfair Display'; font-size:87px;">Willkommen</text>
-            <text transform="matrix(1 0 0 1 278.7505 193.2178)" style="fill:#D4A169; font-size:40px;">im</text>
-            <text transform="matrix(0.9848 -0.1736 0.1736 0.9848 74.7324 353.7676)" style="fill:#D4A169; font-family:'Playfair Display'; font-size:121px;">Parkett!</text>
-            <line style="fill:none;stroke:#D4A169;stroke-width:4;stroke-miterlimit:10;" x1="248" y1="190" x2="83" y2="220"/>
-            <line style="fill:none;stroke:#D4A169;stroke-width:4;stroke-miterlimit:10;" x1="347" y1="173" x2="522" y2="142"/>
-        </svg>
+        <img class="c-animation__img  js-img" src="assets/img/animation/beleuchtete-buehne.jpg" alt="Eine Theaterbühne, die mit 2 Scheinwerfern beleuchtet wird.">
+        <div class="c-animation__content  -rotate  js-content">
+            <p class="topText  text-hl">Willkommen</p>
+            <p class="c-animation__lineDivider"><span><span>im</span></span></p>
+            <p class="bottomText  text-hl">Parkett</p>
+        </div>
     </div>
     <div class="c-animation__frame" id="frame-2">
-        <img class="c-animation__bg js-img" src="assets/img/animation/frame-2.jpg">
-        <svg class="c-animation__content js-content" width="831px" height="326px" viewBox="0 0 831 326">
-            <text transform="matrix(0.9848 -0.1736 0.1736 0.9848 257.666 294.1543)" style="fill:#FFF; font-family:'Playfair Display'; font-size:86px;">Parkett!</text>
-            <text transform="matrix(0.9848 -0.1736 0.1736 0.9848 32.2832 208.1885)" style="fill:#FFF; font-family:'Playfair Display'; font-size:78px;">Pausenlos Programm</text>
-            <text transform="matrix(1 0 0 1 402.1255 181.208)" style="fill:#FFF; font-size:28px;">im</text>
-            <line style="fill:none;stroke:#FFF;stroke-width:4;stroke-miterlimit:10;" x1="380" y1="182" x2="266" y2="204"/>
-            <line style="fill:none;stroke:#FFF;stroke-width:4;stroke-miterlimit:10;" x1="449.9" y1="170" x2="574" y2="147"/>
-        </svg>
+        <img class="c-animation__img  js-img" src="assets/img/animation/gesang.jpg" alt="Eine Gruppe von Schauspielern, die im Chor singen.">
+        <div class="c-animation__content  -rotate  js-content">
+            <p class="topText  text-hl">Pausenlos Programm</p>
+            <p class="c-animation__lineDivider"><span><span>im</span></span></p>
+            <p class="bottomText  text-hl">Parkett</p>
+        </div>
     </div>
     <div class="c-animation__frame" id="frame-3">
-        <img class="c-animation__bg js-img" src="assets/img/animation/frame-3.jpg">
-        <div class="c-animation__content js-content">
-            <p class="text-hl  top-text">Treffpunkt Parkett – für Groß und Klein</p>
-            <p class="text-hl">Fiebern Sie mit uns!</p>
+        <img class="c-animation__img  js-img" src="assets/img/animation/junger-zuschauer.jpg" alt="Ein kleines Kind, dass begeisterst in der Zuschauertribüne eines Theaters sitzt.">
+        <div class="c-animation__content -rotate  js-content">
+            <p class="c-animation__dashDivider  topText  text-hl">Treffpunkt Parkett &ndash; für Groß und Klein</p>
+            <p class="bottomText text-hl">Fiebern Sie mit uns!</p>
         </div>
     </div>
     <div class="c-animation__frame" id="frame-4">
-        <img class="c-animation__bg js-img" src="assets/img/animation/frame-4.jpg">
-        <div class="c-animation__content js-content">
+        <img class="c-animation__img  js-img" src="assets/img/animation/buehne_roter-vorhang.jpg" alt="Eine spärlich beleuchete Bühne mit einem rotem Vorhand und Theaternebel.">
+        <div class="c-animation__content  js-content">
             <p class="text">Wir machen mit beim</p>
-            <p class="title text-hl">Festival Theaterfieber</p>
+            <p class="text-hl title">Festival Theaterfieber</p>
             <p class="text">am Samstag, 13. Oktober 2018<br>von 19 bis 24 Uhr.</p>
-            <p class="divider">
+            <p class="c-animation__dotDivider">
                 <svg width="62px" height="8px" viewBox="0 0 62 8">
-                    <circle fill="#D4A169" cx="31" cy="4" r="4"/>
-                    <circle fill="#D4A169" cx="58" cy="4" r="4"/>
-                    <circle fill="#D4A169" cx="4" cy="4" r="4"/>
+                    <circle fill="#D4A169" cx="31" cy="4" r="4" />
+                    <circle fill="#D4A169" cx="58" cy="4" r="4" />
+                    <circle fill="#D4A169" cx="4" cy="4" r="4" />
                 </svg>
             </p>
             <p class="slogan text-hl">Kommen Sie zu uns!</p>
         </div>
     </div>
-    <div class="c-animation__border">
-        <div class="progress js-progress"></div>
-        <span class="top-left"></span>
-        <span class="top-right"></span>
-        <span class="bottom-left"></span>
-        <span class="bottom-right"></span>
+    <div class="c-animation__border" aria-hidden="true">
+        <span class="progress  js-progress"></span>
+        <span class="block"></span>
+        <span class="block"></span>
+        <span class="block"></span>
+        <span class="block"></span>
     </div>
 </div>
-<!-- Animation Ende -->
