--- a/src/scss/5-objects/_objects.icon.scss
+++ b/src/scss/5-objects/_objects.icon.scss
@@ -1,7 +1,7 @@
 .icon {
-    display: block;
-    width: 1em;
-    height: 1em;
+    display: inline-block;
+    width: 1.5em;
+    height: 1.5em;
     stroke-width: 0;
     stroke: currentColor;
     fill: currentColor;
