--- a/src/scss/6-components/_components.c-animation.scss
+++ b/src/scss/6-components/_components.c-animation.scss
@@ -1,151 +1,195 @@
 .c-animation {
-    $this: &;
+    overflow: hidden;
     position: relative;
     height: 100vh;
     width: 100%;
 
     &__frame {
         position: absolute;
-        left: 0;
         top: 0;
+        left: 0;
         height: 100%;
         width: 100%;
-        overflow: hidden;
-
         display: flex;
         justify-content: center;
         align-items: center;
-        text-align: center;
-
-        padding: 30px;
-        @include breakpoint('small'){
-            padding: 80px;
-        }
     }
 
-    &__bg {
+    &__img {
         position: absolute;
         top: 0;
         left: 0;
-        width: 100%;
         height: 100%;
+        width: 100%;
         object-fit: cover;
     }
 
     &__content {
+        padding: 30px;
+        @include breakpoint('small'){
+            padding: 80px;
+        }
         position: relative;
+        text-align: center;
+
+        &.-rotate p {
+            transform: rotate(-10deg);
+        }
+
+        #frame-1 & {
+            color: color('primary');
+
+            .topText {
+                @include ms-respond('font-size', 8);
+                line-height: 0.9;
+                margin-bottom: 0.1em;
+            }
+            .bottomText {
+                @include ms-respond('font-size', 10);
+                line-height: 0.9;
+            }
+        }
+
+        #frame-2 & {
+
+            .topText {
+                @include ms-respond('font-size', 8);
+                line-height: 0.9;
+                margin-bottom: 0.1em;
+            }
+            .bottomText {
+                @include ms-respond('font-size', 10);
+                line-height: 0.9;
+            }
+        }
+
+        #frame-3 & {
+            margin-top: 35vh;
+
+            .topText {
+                @include ms-respond('font-size', 5);
+                line-height: 1.05;
+                margin-bottom: 0.1em;
+            }
+            .bottomText {
+                @include ms-respond('font-size', 7);
+                line-height: 0.9;
+            }
+        }
+
+        #frame-4 & {
+            .text {
+                @include ms-respond('font-size', 3);
+            }
+
+            .title {
+                @include ms-respond('font-size', 7);
+                line-height: 1.1;
+                color: color('primary');
+                margin-bottom: 0.15em;
+            }
+
+            .slogan {
+                @include ms-respond('font-size', 5);
+            }
+        }
+    }
+
+    &__lineDivider {
+        text-align: center;
+        overflow: hidden;
+        @include ms-respond('font-size', 4);
+        margin: 0 1em;
+
+        & > span {
+            display: inline-block;
+            position: relative;
+            padding: 0 1.5rem;
+            &:before, &:after {
+                content: "";
+                position: absolute;
+                width: 999em;
+                top: 0.8em;
+                height: 2px;
+                background: currentColor;
+            }
+            &:before {
+                left: -999em;
+            }
+            &:after {
+                right: -999em;
+            }
+        }
+    }
+
+    &__content.-rotate &__lineDivider > span > span {
+        display: inline-block;
+        transform: rotate(10deg);
+    }
+
+    &__dashDivider {
+        &:after {
+            content: "";
+            display: block;
+            width: 4em;
+            margin: 0 auto;
+            height: 2px;
+            background: currentColor;
+            margin-top: 0.3em;
+        }
+    }
+
+    &__dotDivider {
+        margin-top: 0.8em;
+        & svg {
+            margin: 0 auto;
+        }
     }
 
     &__border {
         position: absolute;
         top: 50px;
+        left: 15px;
         right: 15px;
         bottom: 50px;
-        left: 15px;
-        border: 2px solid color('white');
         @include breakpoint('small'){
-            right: 50px;
             left: 50px;
+            right: 50px;
+        }
+        border: 2px solid color('white');
+
+        .block {
+            position: absolute;
+            top: -10px;
+            left: -10px;
+            display: block;
+            height: 10px;
+            width: 10px;
+            border: 2px solid color('white');
+
+            &:nth-child(2){
+                left: auto;
+                right: -10px;
+            }
+            &:nth-child(3){
+                top: auto;
+                bottom: -10px;
+            }
+            &:nth-child(4){
+                top: auto;
+                bottom: -10px;
+                left: auto;
+                right: -10px;
+            }
         }
 
         .progress {
             position: absolute;
-            left: 0;
             bottom: -2px;
+            left: 0;
             width: 0;
             height: 2px;
             background: color('primary');
-        }
-
-        span {
-            position: absolute;
-            width: 10px;
-            height: 10px;
-            border: 2px solid color('white');
-        }
-
-        .top-left {
-            top: -10px;
-            left: -10px;
-        }
-        .top-right {
-            top: -10px;
-            right: -10px;
-        }
-        .bottom-left {
-            bottom: -10px;
-            left: -10px;
-        }
-        .bottom-right {
-            bottom: -10px;
-            right: -10px;
-        }
-    }
-}
-
-#frame-1 {
-
-}
-
-#frame-2 {
-    .c-animation__content {
-        .top-text {
-            @include ms-respond('font-size', 6);
-        }
-        .bottom-text {
-            
-        }
-    }
-}
-
-#frame-3 {
-
-
-    .c-animation__content {
-        @include ms-respond('font-size', 6);
-        text-align: center;
-        transform: rotate(-10deg);
-        margin-top: 30vh;
-        p {
-            margin: 0;
-        }
-
-        .top-text {
-            &:after {
-                content: "";
-                display: block;
-                margin: 0.2em auto 0;
-                width: 5em;
-                height: 2px;
-                background: color('white');
-            }
-        }
-    }
-}
-
-#frame-4 {
-
-
-    .text {
-        @include ms-respond('font-size', 2);
-    }
-
-    .title {
-        color: color('primary');
-        @include ms-respond('font-size', 6);
-        margin: 0;
-        line-height: 1;
-    }
-
-    .slogan {
-        @include ms-respond('font-size', 4);
-        margin: 0;
-    }
-
-    .divider {
-        margin: 1em 0 0.5em;
-        svg {
-            margin: 0 auto;
         }
     }
 }
