--- a/src/scss/6-components/_components.c-highlight.scss
+++ b/src/scss/6-components/_components.c-highlight.scss
@@ -4,7 +4,6 @@
 
     &__title {
         color: color('white');
-        padding: 4rem 0;
     }
 
     &__date {
@@ -22,21 +21,21 @@
         }
     }
 
-    &__day {
-        position: relative;
-        font-size: 4em;
-        line-height: 1;
-        padding-bottom: 0.1em;
-    }
+        &__day {
+            position: relative;
+            font-size: 4em;
+            line-height: 1;
+            padding-bottom: 0.1em;
+        }
 
-    &__month {
-        position: relative;
-        font-size: 1.3em;
-        padding-bottom: 0.7em;
-    }
+        &__month {
+            position: relative;
+            font-size: 1.3em;
+            padding-bottom: 0.7em;
+        }
 
     &__text {
-        max-width: 40em;
+        max-width: 684px;
         margin: 0 auto;
         padding: 2em 2em 0;
         background: color('grey', 'xdark');
@@ -44,13 +43,19 @@
 
     &:after {
         content: "";
-        z-index: -1;
+        display: block;
         position: absolute;
         top: 0;
         left: 0;
         right: 0;
-        background-image: url('../img/zuschauer.jpg');
+        height: 300px;
+        @include breakpoint('small'){
+            height: 400px;
+        }
+        max-height: 100%;
+        background: url('../img/theaterpublikum-breit.jpg');
+        background-position: center;
         background-size: cover;
-        height: 400px;
+        z-index: -1;
     }
 }
