--- a/src/scss/6-components/_components.c-timetable.scss
+++ b/src/scss/6-components/_components.c-timetable.scss
@@ -1,71 +1,95 @@
 .c-timetable {
-    max-width: 1300px;
-    padding: 0 1em;
+    max-width: 1288px;
     margin: 0 auto;
-
-    &__list {
-        margin-top: 3em;
-    }
+    padding: 0 1em;
 
     &__item {
         padding: 1.5em 0;
-        border-bottom: 1px solid color('white');
-        &:first-child {
-            border-top: 1px solid color('white');
+        border-top: 1px solid color('white');
+        &:last-child {
+            border-bottom: 1px solid color('white');
         }
 
         @include breakpoint('small'){
             display: grid;
-            grid-template-columns: 13em 1fr;
+            grid-template-columns: 12em 1fr;
+            grid-gap: 0 2em;
         }
+
         @include breakpoint('large'){
-            grid-template-columns: 13em 1fr 1fr;
+            grid-template-columns: 12em 1fr 1fr;
         }
     }
 
-    &__time {
-        line-height: 1.2;
-        position: relative;
-        white-space: nowrap;
+        &__time {
+            line-height: 1.1;
 
-        padding-bottom: 1em;
-        border-bottom: 1px solid color('grey', 'dark');
-        margin-bottom: 1em;
-        @include breakpoint('small'){
-            grid-row: 1 / 3;
-            padding-bottom: 0;
-            margin-bottom: 0;
-            border-bottom: 0;
-            border-right: 1px solid color('grey', 'dark');
-            padding-right: 2em;
-            margin-right: 2em;
-            padding-top: 0.3em;
+            padding-bottom: 1em;
+            border-bottom: 1px solid color('grey', 'dark');
+
+            @include breakpoint('small'){
+                grid-row: 1 / 3;
+                padding-top: 0.2em;
+                padding-bottom: 0;
+                border-bottom: 0;
+                padding-right: 2em;
+                border-right: 1px solid color('grey', 'dark');
+            }
+
+            @include breakpoint('large'){
+                grid-row: auto;
+            }
         }
-    }
 
-    &__date {
-        @include ms-respond('font-size', 2);
-        color: color('primary');
-    }
+            &__hour {
+                @include ms-respond('font-size', 2);
+                color: color('primary');
+            }
 
-    &__head {
-        @include breakpoint('large'){
-            padding-right: 2em;
+        &__head {
+            padding-top: 1em;
+            padding-bottom: 1em;
+            border-bottom: 1px solid color('grey', 'dark');
+
+            @include breakpoint('small'){
+                padding-top: 0;
+            }
+
+            @include breakpoint('large'){
+                padding-bottom: 0;
+                border-bottom: 0;
+
+                padding-right: 1em;
+                border-right: 1px solid color('grey', 'dark');
+            }
         }
-    }
 
-    &__text {
+            &__title {
+                margin-bottom: 0.2em;
+            }
 
-        padding-top: 1em;
-        border-top: 1px solid color('grey', 'dark');
-        margin-top: 1em;
-        @include breakpoint('large'){
-            padding-top: 0;
-            border-top: 0;
-            margin-top: 0;
-            border-left: 1px solid color('grey', 'dark');
-            padding-left: 2em;
-            padding-top: 0.3em;
+        &__desc {
+            padding-top: 1em;
+            @include breakpoint('large'){
+                padding-top: 0;
+            }
         }
-    }
+
+            &__gallery {
+                margin-top: 0.8em;
+            }
+
+            &__galleryButton {
+                position: relative;
+                padding: 0.1em 0 0.1em 2em;
+                .icon {
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                }
+                &:hover, &:focus {
+                    outline: 0;
+                    color: color('primary');
+                }
+            }
 }
